--- a/css/styles.css
+++ b/css/styles.css
@@ -31,4 +31,13 @@ a  {
 	color: red;
 }
 
+label {
+    display: block;
+    font: 1rem 'Fira Sans', sans-serif;
+}
+
+input,
+label {
+    margin: 0.4rem 0;
+}
 
